--- a/job-board/client/package.json
+++ b/job-board/client/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "prettier": "3.2.5",
     "react-scripts": "5.0.1"
   },
   "browserslist": {
